crates/unleash-api-client-macros/tests/ui/fail/name_matches_literal.stderr
error: duplicate feature name: `FeatureA`
  --> tests/ui/fail/name_matches_literal.rs:10:20
   |
10 |     #[feature_name("FeatureA")]
   |                    ^^^^^^^^^^
